--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "validator-template"
-version = "0.0.0"
-description = "Template repo for Guardrails Hub validators."
+name = "grounded-ai-halu-validator"
+version = "0.0.1"
+description = "A halicination validator"
 authors = [
     {name = "Guardrails AI", email = "contact@guardrailsai.com"}
 ]
@@ -9,7 +9,12 @@ license = {file = "LICENSE"}
 readme = "README.md"
 requires-python = ">= 3.8.1"
 dependencies = [
-    "guardrails-ai>=0.4.0"
+    "guardrails-ai>=0.4.0",
+    "bitsandbytes",
+    "torch",
+    "jinja2",
+    "peft",
+    "transformers"
 ]
 
 [project.optional-dependencies]
